Questions now correctly align when the question is long

--- a/client/src/components/Questions/css/Question.css
+++ b/client/src/components/Questions/css/Question.css
@@ -8,7 +8,14 @@
   word-wrap: break-word;
   word-break: break-all;
   max-width: 75%;
+  display: grid;
+  grid-template-columns: auto 1fr;
 }
+
+/* .quesionBody {
+  display: grid;
+  grid-template-columns: auto auto;
+} */
 
 .questionFooter {
   display: grid;
